Removed a inline-block that was causing align-issue

--- a/docs/.vuepress/public/css/neumorphism.css
+++ b/docs/.vuepress/public/css/neumorphism.css
@@ -227,13 +227,6 @@ table td:nth-child(5) {
     width: 1.75em !important;
 }
 
-@media all and (max-width: 900px) {
-
-    table td:nth-child(2),
-    table th:nth-child(2) {
-        display: inline-block;
-    }
-}
 
 @media all and (min-width: 900px) {
     table td:nth-child(1) {
